fix: Member 목록 조회 수정