@@ -1,20 +1,21 @@
+package com.example.kakao;
+
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
-import com.hanssarang.backend.member.domain.Member;
-import com.hanssarang.backend.member.domain.MemberRepository;
-import java.util.*;
-import java.util.stream.toList;
+
+import java.util.List;
+import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @Service
 public class MemberService {
-	
-	private final MemberRepository memberRepository;
-	
-	public List<String> getMembers() {
-		return memberRepository.findAll()
-			.stream()
-			.map(Member::getName)
-			.toList();
-	}
+
+    private final MemberRepository memberRepository;
+
+    public List<String> getMembers() {
+        return memberRepository.findAll()
+                .stream()
+                .map(Member::getName)
+                .collect(Collectors.toList());
+    }
 }
